# FreeTensor

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitmodules  .yapfignore  404.html  CMakeLists.txt  Doxyfile  LICENSE  README.md  clang-minimal-dev.Dockerfile  clang-mkl-dev.Dockerfile  cuda-mkl-dev.Dockerfile  cuda-mkl-pytorch-dev.Dockerfile  docker.Makefile  extra.css  gcc-minimal-dev.Dockerfile  index.html  init.sh  lgtm.yml  minimal-dev.Dockerfile  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  search.html  setup.py  sitemap.xml  with-cuda.toml  with-mkl.toml  with-pytorch.toml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  doc.yml  format.yml  main.yml  pylint.yml
about/contrib/: index.html
about/pub/: index.html
antlr/ir/: Makefile  MyLexer.g4  MyParser.g4  input  main.cpp  prog_input
antlr/src/: ASTNode.h  AnnotateTypeInfo.cpp  AnnotateTypeInfo.d  AnnotateTypeInfo.h  CodeGenVisitor.cpp  CodeGenVisitor.d  CodeGenVisitor.h  DataGenVisitor.cpp  DataGenVisitor.d  DataGenVisitor.h  GetTypeInfo.cpp  GetTypeInfo.d  GetTypeInfo.h  MDLexer.cpp  MDLexer.d  MDLexer.g4  MDLexer.h  MDParser.cpp  MDParser.d  MDParser.g4  MDParser.h  Makefile  Mutator.h  ScopeMutator.cpp  ScopeMutator.d  ScopeMutator.h  VarAllocVisitor.cpp  VarAllocVisitor.d  VarAllocVisitor.h  Visitor.h  error.h  main.cpp  main.d
api/: index.html
ci-script/: prepare-python-environment.sh  with-spack-mkl.toml
docs/: api.md  extra.css  index.md
docs/about/: contrib.md  pub.md
docs/guide/: ad.md  build-and-run.md  first-program.md  gpu.md  hint.md  index.md  schedules.md
doxygen/html/: access__type_8h.html  access__type_8h__dep__incl.dot  access__type_8h__dep__incl.map  access__type_8h__dep__incl.md5  access__type_8h__incl.dot  access__type_8h__incl.map  access__type_8h__incl.md5  access__type_8h_source.html  all__defs_8cc.html  all__defs_8cc__incl.map  all__defs_8cc__incl.md5  all__defs_8h.html  all__defs_8h__dep__incl.dot  all__defs_8h__dep__incl.map  all__defs_8h__dep__incl.md5  all__defs_8h__incl.dot  all__defs_8h__incl.map  all__defs_8h__incl.md5  all__defs_8h_source.html  all__no__reuse__defs_8cc.html  all__no__reuse__defs_8cc__incl.dot  all__no__reuse__defs_8cc__incl.map  all__no__reuse__defs_8cc__incl.md5  all__no__reuse__defs_8h.html  all__no__reuse__defs_8h__dep__incl.dot  all__no__reuse__defs_8h__dep__incl.map  all__no__reuse__defs_8h__dep__incl.md5  all__no__reuse__defs_8h__incl.dot  all__no__reuse__defs_8h__incl.map  all__no__reuse__defs_8h__incl.md5  all__no__reuse__defs_8h_source.html  all__side__effect__intrinsics_8h.html  all__side__effect__intrinsics_8h__dep__incl.dot  all__side__effect__intrinsics_8h__incl.dot  all__side__effect__intrinsics_8h_source.html  all__stmts_8cc.html  all__stmts_8cc__incl.dot  all__stmts_8cc__incl.map  all__stmts_8cc__incl.md5  all__stmts_8h.html  (+5170 more)
experiments/: ae.ipynb  dependency.md  gather_nvprof_log.py  test_multi_level_tiling.py  test_multi_level_tiling_perfect.py  test_task_scheduler.py
experiments/common/: README.md  gpu.py
experiments/gat/: .gitignore  compare.py  gen_data.py  get_data.sh
experiments/longformer/: compare.py  gen_data.py
experiments/lstm/: compare.py  gen_data.py
experiments/softrast/: .gitignore  compare.py  gen_data.py
experiments/subdivnet/: .gitignore  compare.py  gen_data.py  get_data.sh
ffi/: analyze.cc  array.cc  ast.cc  auto_schedule.cc  autograd.cc  buffer.cc  codegen.cc  config.cc  debug.cc  device.cc  driver.cc  except.cc  expr.cc  ffi.cc  ffi.h  frontend.cc  func.cc  mangle.cc  metadata.cc  parallel_scope.cc  pass.cc  reduce_op.cc  schedule.cc  selector.cc  stmt.cc  tensor_types.cc
grammar/: ast_lexer.g  ast_parser.g  pb_lexer.g  pb_parser.g  selector_lexer.g  selector_parser.g
guide/: index.html
guide/ad/: index.html
guide/build-and-run/: index.html
guide/first-program/: index.html
guide/gpu/: index.html
guide/hint/: index.html
guide/schedules/: index.html
include/: access_type.h  allocator.h  ast.h  buffer.h  config.h  container_utils.h  cursor.h  cutlass_micro_kernel_property.h  data_type.h  data_type_infer.h  debug.h  disjoint_set.h  driver.h  except.h  expr.h  ffi.h  for_property.h  frontend_utils.h  func.h  func_utils.h  get_new_name.h  hash.h  hash_combine.h  id.h  lazy.h  lower.h  mangle.h  maybe_void.h  metadata.h  mutator.h  omp_utils.h  opt.h  parallel_scope.h  random.h  reduce_op.h  ref.h  schedule.h  selector.h  shared_linked_list.h  stack.h  (+6 more)
include/analyze/: all_defs.h  all_iters.h  all_names.h  all_no_reuse_defs.h  all_reads.h  all_side_effect_intrinsics.h  all_stmts.h  all_uses.h  all_writes.h  analyze_linear.h  analyze_version.h  as_dnf.h  auto_schedule_analyzer.h  bounds.h  check_all_defined.h  check_not_modified.h  comp_access_bound.h  comp_for_bound.h  comp_transient_bounds.h  comp_unique_bounds.h  comp_unique_bounds_combination.h  comp_unique_bounds_pb.h  count_contig_access_loops.h  deps.h  disambiguous.h  find_all_loops.h  find_all_scopes.h  find_elementwise.h  find_indexing_loops.h  find_loop_variance.h  find_multi_level_tiling.h  find_stmt.h  find_thread_bind.h  fixed_length_feature.h  get_loop_nest_tree.h  hash.h  linear.h  (+9 more)
javascripts/: mathjax.js
runtime/: README.md  context.h  cpu_context.h  cpu_runtime.h  gpu_context.h  gpu_runtime.h  integer_range.h  mdspan.h  unchecked_opt.h
script/: start_worker.py
search/: search_index.json
src/: allocator.cc  ast.cc  buffer.cc  config.cc  container_utils.cc  cursor.cc  cutlass_micro_kernel_property.cc  data_type.cc  data_type_infer.cc  driver.cc  except.cc  expr.cc  ffi.cc  for_property.cc  frontend_utils.cc  func.cc  get_new_name.cc  hash.cc  hash_combine.cc  id.cc  mangle.cc  metadata.cc  mutator.cc  random.cc  reduce_op.cc  remove_cyclic_assign.cc  schedule.cc  selector.cc  stmt.cc  sub_tree.cc  tensor.cc  timeout.cc  visitor.cc
test/: test_cache_read.py  test_cache_write.py  test_codegen.py  test_fission.py  test_fuse.py  test_merge.py  test_move_to.py  test_reorder.py  test_shrink_for.py  test_simplify.py  test_sink_var.py  test_split.py  test_swap.py
(+1070 files in other folders)
